# simple_star

./: README.rst  setup.cfg  setup.py  tox.ini
simple_star/: polytrope.py  polytrope.py~
simple_star/tests/: test_polytrope.py
