[metadata]
name = simple_star
author = Marten H. van Kerkwijk
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = LICENSE
url = https://github.com/mhvk/simple_star
description = Solve simple stellar structure probblems
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/simple_star

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    astropy>=4.3
    scipy
    matplotlib

[options.extras_require]
test =
    pytest-astropy-header
    pytest-doctestplus

[tool:pytest]
testpaths = "simple_star"
astropy_header = true
astropy_header_packages =
    astropy
    numpy
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --doctest-ignore-import-errors
filterwarnings =
  error
  ignore:::pytest_doctestplus
  ignore:numpy.ufunc size changed:RuntimeWarning
  ignore:numpy.ndarray size changed:RuntimeWarning

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    simple_star/conftest.py,simple_star/version.py,simple_star/__init__.py,
    simple_star/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    simple_star/conftest.py,simple_star/version.py,simple_star/__init__.py,
    simple_star/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses
